Project/Design01.cydsn/REBUILD.log
--------------- Rebuild Started: 04/22/2024 10:27:10 Project: Design01, Configuration: ARM GCC 5.4-2016-q2-update Debug ---------------
Deleting file ".\CortexM3\ARM_GCC_541\Debug\main.o"
Deleting file ".\Design01.cycdx"
Deleting file ".\Design01.svd"
Deleting file ".\Design01.rpt"
Deleting file ".\Design01_timing.html"
cydsfit.exe -.appdatapath "C:\Users\z004e6he\AppData\Local\Cypress Semiconductor\PSoC Creator\4.4" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -.fdsreffile=referenced_files.txt -p "C:\UserData\z004e6he\OneDrive - Siemens AG\Documents\PSoC Creator\PSoC\Project\Design01.cydsn\Design01.cyprj" -d CY8C5888LTI-LP097 -s "C:\UserData\z004e6he\OneDrive - Siemens AG\Documents\PSoC Creator\PSoC\Project\Design01.cydsn\Generated_Source\PSoC5" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation...
Synthesis...
Tech Mapping...
Analog Placement...
Info: apr.M0002: Analog signal "\ADC:Net_35\" is connected to one terminal only. (App=cydsfit)
Analog Routing...
Analog Code Generation...
Digital Placement...
Digital Routing...
Bitstream Generation...
Bitstream Verification...
Static timing analysis...
API Generation...
Dependency Generation...
Cleanup...
arm-none-eabi-gcc.exe -mcpu=cortex-m3 -mthumb -I. -IGenerated_Source\PSoC5 -Wa,-alh=.\CortexM3\ARM_GCC_541\Debug/main.lst -g -D DEBUG -D CY_CORE_ID=0 -Wall -ffunction-sections -ffat-lto-objects -Og -c main.c -o .\CortexM3\ARM_GCC_541\Debug\main.o
In file included from main.c:14:0:
HallEffect.h:17:17: error: unknown type name 'switches'
 void scanMatrix(switches *matrix);
                 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 04/22/2024 10:27:24 ---------------
